fix layout issue

--- a/static/ratings.css
+++ b/static/ratings.css
@@ -12,7 +12,6 @@ header {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
 }
 .flex-item{
     text-align: center;
